crates/rcc_driver/tests/ui/parse/triple_error_recovery.c
void f(void) {
    int a = ;
    int b = ;
    int c = ;
}
